--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2053,6 +2053,7 @@ p.dis_content {
 
 .su_Pakket2Go {
     color: #01B537;
+    margin-left: 15px;
 }
 
 .su_white_bg_text {
@@ -2448,5 +2449,17 @@ color: #01B537;
 .su_icons_text_adjust{
     inline-size: 150px; 
     overflow: hidden;
+}
+.su_country_dropdown{
+    height: 64px;
+    border-radius: 13.118px;
+    width: 100%;
+    border: 1px solid #D9D9D9;
+}
+.su_country_dropdown:focus-visible {
+    outline: none !important;
+}
+.iti {
+    width: 100%;
 }
 /* sumit dashboard css end */
