--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -661,6 +661,9 @@
  @media only screen and (max-width: 480px) {
 
      /* sumit code start  */
+     .su_phone_no {
+        margin: 10px 0px;
+    }
      .su_icons_text_adjust {
         width: auto;
     }
