--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1566,7 +1566,7 @@ p.dis_content {
     background: #25282B;
     box-shadow: 0px -1px 6px rgba(0, 0, 0, 0.08), 0px 1px 6px rgba(0, 0, 0, 0.08);
     border-radius: 0px 30px 30px 0px;
-    height: 100vh;
+    height: 100%;
 }
 
 .su_register_sidebar_padding {
@@ -1574,7 +1574,7 @@ p.dis_content {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 100%;
+    height: 100vh;
 }
 
 .su_sign_up_align {
@@ -2883,3 +2883,53 @@ width: 70%;
     margin-right: 15px;
 }
 /* sumit dashboard css end */
+
+.form-wrapper {
+    max-width: 30%;
+    min-width: 300px;
+    padding: 50px 30px 50px 30px;
+    margin: 50px auto;
+    background-color: #ffffff;
+    border-radius: 5px;
+    box-shadow: 0 15px 35px rgba(50, 50, 93, .1), 0 5px 15px rgba(0, 0, 0, .07);
+}
+
+.form-group {
+    position: relative;
+
+}
+
+.form-label {
+    position: absolute;
+    left: 60px;
+    top: 15px;
+    width: auto;
+    width: auto !important;
+}
+
+.focused .form-label {
+    transform: translateY(-125%);
+    font-size: .75em;
+    background-color: #ffffff;
+    font-weight: 600;
+    font-size: 14.4298px;
+    line-height: 20px;
+    color: #01B537;
+    transition: all .3s ease-out;
+}
+
+.form-input.filled {
+    box-shadow: 0 2px 0 0 lightgreen;
+}
+
+.su_hide_input {
+    border: none;
+    width: 100%;
+}
+
+.su_hide_input:focus-visible {
+    outline: none !important;
+}
+.iti--separate-dial-code .iti__selected-flag {
+    background-color: transparent !important;
+}
